# rclone-setup

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/rclone_setup/: __main__.py  app.py  config.py  sync_engine.py
