[project]
name = "rclone-setup"
version = "0.1.0"
description = "Desktop UI to manage rclone bisync jobs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["FreeSimpleGUI"]

[project.scripts]
rclone-setup = "rclone_setup.app:main"

[project.gui-scripts]
rclone-setup-gui = "rclone_setup.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rclone_setup"]
